syntax = "proto3";

package secret.v1;

import "common/v1/objectMeta.proto";
import "google/api/annotations.proto";


option go_package = "miam-apiserver/api/secret/v1;v1";
option java_multiple_files = true;
option java_package = "api.secret.v1";

service Secret {
	rpc CreateSecret (CreateSecretRequest) returns (CreateSecretReply){
		option (google.api.http) = {
			post: "/v1/secret",
			body: "*"
		  };
	};
	rpc UpdateSecret (UpdateSecretRequest) returns (UpdateSecretReply);
	rpc DeleteSecret (DeleteSecretRequest) returns (DeleteSecretReply);
	rpc GetSecret (GetSecretRequest) returns (GetSecretReply);
	rpc ListSecret (ListSecretRequest) returns (ListSecretReply);
}

message CreateSecretRequest {
	int64 expires = 1;
}
message CreateSecretReply {}

message UpdateSecretRequest {}
message UpdateSecretReply {}

message DeleteSecretRequest {}
message DeleteSecretReply {}

message GetSecretRequest {}
message GetSecretReply {}

message ListSecretRequest {
}
message ListSecretReply {
	common.v1.ListMeta listMeta = 1;
	repeated secret secrets = 2;
}

message secret {
	common.v1.objectMeta meta = 1;
	string username  = 2;
	string secretID  = 3;
	string secretKey = 4;
	int64 expires    = 5;
	string description = 6;
}